--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,9 @@
   "name": "reactflow",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nocodeai.cloud.github.io",
   "dependencies": {
+    "-": "^0.0.1",
     "@air/react-drag-to-select": "^2.2.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
@@ -18,6 +20,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.20.5",
     "axios": "^0.27.2",
+    "gh-pages": "^4.0.0",
     "lodash.throttle": "^4.1.1",
     "material-ui-color-picker": "^3.5.1",
     "mui-rte": "^2.0.1",
@@ -37,6 +40,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-style-object-to-css": "^1.1.2",
+    "save-dev": "^0.0.1-security",
     "use-image": "1.0.2",
     "web-vitals": "^2.1.4"
   },
@@ -44,7 +48,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
